update tmux config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,9 +1,12 @@
 # tmux起動時のシェルをzshにする
 set-option -g default-shell /bin/zsh
 
+# リロード
+bind r source-file ~/dotfiles/tmux/.tmux.conf \; display "Reloaded!"
+
 # tmuxを256色表示できるようにする
-set-option -g default-terminal screen-256color
-set -g terminal-overrides 'xterm:colors=256'
+ set-option -g default-terminal screen-256color
+ set -g terminal-overrides 'xterm:colors=256'
 
 # prefixキーをC-qに変更
 set -g prefix C-q
@@ -15,15 +18,16 @@ unbind C-b
 set-option -g status-position top
 
 # 左右のステータスバーの長さを決定する 
-set-option -g status-left-length 90 set-option -g status-right-length 90
+set-option -g status-left-length 20
+set-option -g status-right-length 120 
 
 # #P => ペイン番号
 # 最左に表示
 set-option -g status-left '#H:[#P]'
 
-# Wi-Fi、バッテリー残量、現在時刻
+# メモリ、Wi-Fi、バッテリー残量、現在時刻
 # 最右に表示
-set-option -g status-right '#(wifi) #(battery --tmux) [%Y-%m-%d(%a) %H:%M]'
+set-option -g status-right '#(used-mem "Ⓜ #.1u%") #(wifi) #(battery --tmux) [%Y-%m-%d(%a) %H:%M]'
 
 # ステータスバーを1秒毎に描画し直す
 set-option -g status-interval 1
@@ -31,11 +35,6 @@ set-option -g status-interval 1
 # センタライズ（主にウィンドウ番号など）
 set-option -g status-justify centre
 
-# ステータスバーの色を設定する
-set-option -g status-bg "colour46"
-
-# status line の文字色を指定する。
-set-option -g status-fg "colour255"
 
 # vimのキーバインドでペインを移動する
 bind h select-pane -L
@@ -83,3 +82,12 @@ bind -T copy-mode-vi Y send -X copy-line
 
 # 'C-p'でペースト
 bind-key C-p paste-buffer
+
+
+# tmux plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'KeitaNakamura/tmux-colors-railscasts'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
