change prefix key of tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -9,10 +9,10 @@ bind r source-file ~/dotfiles/tmux/.tmux.conf \; display "Reloaded!"
  set -g terminal-overrides 'xterm:colors=256'
 
 # prefixキーをC-qに変更
-set -g prefix C-q
+# set -g prefix C-q
 
 # C-bのキーバインドを解除
-unbind C-b
+# unbind C-b
 
 # ステータスバーをトップに配置する
 set-option -g status-position top
@@ -49,7 +49,7 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 # | でペインを縦分割する
-bind | split-window -h
+bind \ split-window -h
 
 # - でペインを縦分割する
 bind - split-window -v
