set working directory as the previous pane when splitted

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,12 +8,6 @@ bind r source-file ~/dotfiles/tmux/.tmux.conf \; display "Reloaded!"
  set-option -g default-terminal screen-256color
  set -g terminal-overrides 'xterm:colors=256'
 
-# prefixキーをC-qに変更
-# set -g prefix C-q
-
-# C-bのキーバインドを解除
-# unbind C-b
-
 # ステータスバーをトップに配置する
 set-option -g status-position top
 
@@ -49,10 +43,10 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 # | でペインを縦分割する
-bind \ split-window -h
+bind \ split-window -h -c '#{pane_current_path}'
 
 # - でペインを縦分割する
-bind - split-window -v
+bind - split-window -v -c '#{pane_current_path}'
 
 # 番号基準値を変更
 set-option -g base-index 1
