--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -43,7 +43,7 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 # | でペインを縦分割する
-bind \ split-window -h -c '#{pane_current_path}'
+bind \\ split-window -h -c '#{pane_current_path}'
 
 # - でペインを縦分割する
 bind - split-window -v -c '#{pane_current_path}'
