autorename pane according to the current directory

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,13 @@
 # tmux起動時のシェルをzshにする
 set-option -g default-shell /bin/zsh
 
+# ペインの名前をカレントディレクトリにする
+
+set-option -g status-interval 5
+set-option -g automatic-rename on
+set-option -g automatic-rename-format '#(basename "#{pane_current_path}")'
+
+
 # リロード
 bind r source-file ~/dotfiles/tmux/.tmux.conf \; display "Reloaded!"
 
@@ -79,9 +86,9 @@ bind-key C-p paste-buffer
 
 
 # tmux plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'KeitaNakamura/tmux-colors-railscasts'
+# set -g @plugin 'tmux-plugins/tpm'
+# set -g @plugin 'tmux-plugins/tmux-sensible'
+# set -g @plugin 'KeitaNakamura/tmux-colors-railscasts'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
