--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -86,9 +86,8 @@ bind-key C-p paste-buffer
 
 
 # tmux plugins
-# set -g @plugin 'tmux-plugins/tpm'
-# set -g @plugin 'tmux-plugins/tmux-sensible'
-# set -g @plugin 'KeitaNakamura/tmux-colors-railscasts'
+set -g @plugin 'wfxr/tmux-fzf-url'
+set -g @plugin 'tmux-plugins/tmux-sidebar'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
