Disable mouse support in tmux configuration

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -58,9 +58,8 @@ bind - split-window -v -c '#{pane_current_path}'
 # 番号基準値を変更
 set-option -g base-index 1
 
-# マウス操作を有効にする
-set-option -g mouse on
-bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
+# マウス操作を無効にする
+set-option -g mouse off
 
 # コピーモードを設定する
 # コピーモードでvimキーバインドを使う
