fix: enable mouse support in tmux configuration

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -58,8 +58,7 @@ bind - split-window -v -c '#{pane_current_path}'
 # 番号基準値を変更
 set-option -g base-index 1
 
-# マウス操作を無効にする
-set-option -g mouse off
+set-option -g mouse on
 
 # コピーモードを設定する
 # コピーモードでvimキーバインドを使う
